--- a/campbell'sapp/src/main/res/values/strings.xml
+++ b/campbell'sapp/src/main/res/values/strings.xml
@@ -8,4 +8,27 @@
     <string name="action_signinout">Sign In/Out</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="timer_format">This is the timer section. AKA section: %d</string>
+    <string name="pcstatus_format">This is the PC Status section. AKA section: %d</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="button_presspower">Press Power</string>
+    <string name="button_holdpower">Hold Power</string>
+    <string name="button_pressreset">Press Reset</string>
+    <string name="button_wake">Wake</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="server_client_id">275682034627-qe6qsb6jbsonef00uoe5vrt5qsgfemc9.apps.googleusercontent.com</string>
 </resources>
