--- a/campbell'sapp/src/main/res/values/strings.xml
+++ b/campbell'sapp/src/main/res/values/strings.xml
@@ -18,4 +18,65 @@
     <string name="server_client_id">275682034627-qe6qsb6jbsonef00uoe5vrt5qsgfemc9.apps.googleusercontent.com</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
+
+    <string name="text_manager_notification_title_template">%1$s</string>
+
+    <string name="text_manager_notification_placeholder_text_template">%1$s This may still fail if you are not signed in in the app or something else goes wrong.</string>
+
+    <string name="action_share">Share</string>
+    <string name="action_reply">Reply</string>
+    <string name="preference_file_key">com.campbellcrowley.dev.campbellsapp.PREFERENCE_FILE_KEY</string>
+    <string name="global_notification_toggle">Notifications Enabled</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings related to Settings -->
+    <!-- Example settings for Data & Account -->
+    <string name="pref_header_data_sync">Data &amp; Account</string>
+
+    <string name="pref_title_display_name">Display name</string>
+    <string name="pref_default_display_name">John Smith</string>
+
+    <string name="pref_title_sync_frequency">Sync frequency</string>
+    <string-array name="pref_sync_frequency_titles">
+        <item>15 seconds</item>
+        <item>30 seconds</item>
+        <item>1 minutes</item>
+        <item>5 minutes</item>
+        <item>15 minutes</item>
+        <item>30 minutes</item>
+        <item>1 hour</item>
+        <item>3 hours</item>
+        <item>6 hours</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_sync_frequency_values">
+        <item>0.25</item>
+        <item>0.5</item>
+        <item>1</item>
+        <item>5</item>
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+        <item>180</item>
+        <item>360</item>
+        <item>-1</item>
+    </string-array>
+
+    <!-- Example settings for Notifications -->
+    <string name="pref_header_notifications">Notifications</string>
+
+    <string name="pref_title_all_notifications">All notifications</string>
+    <string name="pref_title_power_on_notification">Computer turns on</string>
+    <string name="pref_title_power_off_notification">Computer turns off</string>
+    <string name="pref_title_power_pressed_notification">Power button pressed</string>
+    <string name="pref_title_power_held_notification">Power button held</string>
+    <string name="pref_title_reset_pressed_notification">Reset button pressed</string>
+    <string name="pref_title_wake_notification">Wake sent to computer</string>
+    <string name="pref_title_widget_event">Widget event</string>
+    <string name="pref_title_show_display_name">Show who triggered event</string>
+
+    <string name="pref_title_ringtone">Ringtone</string>
+    <string name="pref_ringtone_silent">Silent</string>
+
+    <string name="pref_title_vibrate">Vibrate</string>
 </resources>
